--- a/content/mobile/打包工程.md
+++ b/content/mobile/打包工程.md
@@ -6,6 +6,8 @@
 
    2. 傻瓜安装
 
+      
+
 2. [安装pop的iOS包管理](https://www.jianshu.com/p/f43b5964f582)
     2019.01.03最新的CocoaPods安装教程
 
@@ -58,4 +60,18 @@
     ```
 
     
+
+    如果command line tools找不到，则进入xcode->perferece->locations->command line tools切换选项
+
+     
+
+    证书：安装p12文件 和 证书mobileprovision文件
+
+
+
+​	另外还需要ExportOptions.plist拷贝到制定的项目下，其作用是配置工程的证书设置
+
+​	![屏幕快照 2019-01-17 下午2.17.52](/Users/intech/Note/images/屏幕快照 2019-01-17 下午2.17.52.png)
+
+
 
