--- a/content/mobile/打包工程.md
+++ b/content/mobile/打包工程.md
@@ -34,6 +34,7 @@
     ```sh
     gem sources -l
     ```
+    
 
     >如果是以下结果说明正确，如果有其他的请自行百度解决
 
@@ -42,38 +43,37 @@
     
     https://gems.ruby-china.com/
     ```
+    
 
     4、这时候才正式开始安装CocoaPods
 
     ```sh
     sudo gem install -n /usr/local/bin cocoapods
     ```
+    
 
     5、如果安装了多个Xcode使用下面的命令选择（一般需要选择最近的Xcode版本）
 
     ```
     sudo xcode-select -switch /Applications/Xcode.app/Contents/Developer
     ```
-
+    
     6、安装本地库
 
     ```sh
     pod setup
     ```
-
     
-
+    
     如果command line tools找不到，则进入xcode->perferece->locations->command line tools切换选项
 
      
-
     证书：安装p12文件 和 证书mobileprovision文件
 
 
+	另外还需要ExportOptions.plist拷贝到制定的项目下，其作用是配置工程的证书设置
 
-​	另外还需要ExportOptions.plist拷贝到制定的项目下，其作用是配置工程的证书设置
-
-​	![屏幕快照 2019-01-17 下午2.17.52](/Users/intech/Note/images/屏幕快照 2019-01-17 下午2.17.52.png)
+	![屏幕快照 2019-01-17 下午2.17.52](/Users/intech/Note/images/屏幕快照 2019-01-17 下午2.17.52.png)
 
 
 
