--- a/content/mobile/打包工程.md
+++ b/content/mobile/打包工程.md
@@ -6,6 +6,26 @@
 
    2. 傻瓜安装
 
+   3. 安装java8环境
+
+   4. 安装gradle
+
+   5. Gradle路径不对许使用绝对路径
+
+   6. 如果遇到缺少sdk 27或28level环境的问题，需在Android studio里安装
+
+   7. 配置java,gradle环境变量
+
+       ```bash
+      PATH="/usr/local/opt/php@7.2/bin:$PATH"
+      export PATH="/usr/local/opt/php@7.2/sbin:$PATH"
+      export PATH=/Users/intech/gradle/gradle-4.6/bin:$PATH
+      export PATH=/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/opt/X11/bin:/usr/local/ant/bin:/opt/reverse:$PATH
+      export JAVA_HOME=$(/usr/libexec/java_home)
+      export PATH=$JAVA_HOME/bin:$PATH
+      export CLASS_PATH=$JAVA_HOME/lib
+       ```
+
       
 
 2. [安装pop的iOS包管理](https://www.jianshu.com/p/f43b5964f582)
@@ -13,13 +33,13 @@
 
      1、查看当前Ruby版本
 
-    ```sh
+    ```bash
     ruby -v
     ```
 
     2、更换源
 
-    ```sh
+    ```bash
         sudo gem update --system
     
         gem sources --remove https://rubygems.org/
@@ -27,53 +47,47 @@
         gem sources --add https://gems.ruby-china.com/
     ```
 
-    
-
     3、为了验证你的Ruby镜像是并且仅是ruby-china，执行以下命令查看
 
     ```sh
     gem sources -l
-    ```
     
-
-    >如果是以下结果说明正确，如果有其他的请自行百度解决
-
-    ```sh
     *** CURRENT SOURCES ***
     
     https://gems.ruby-china.com/
     ```
-    
+
 
     4、这时候才正式开始安装CocoaPods
 
     ```sh
     sudo gem install -n /usr/local/bin cocoapods
     ```
-    
+
 
     5、如果安装了多个Xcode使用下面的命令选择（一般需要选择最近的Xcode版本）
 
     ```
     sudo xcode-select -switch /Applications/Xcode.app/Contents/Developer
     ```
-    
+
     6、安装本地库
 
     ```sh
     pod setup
     ```
-    
-    
+
+
     如果command line tools找不到，则进入xcode->perferece->locations->command line tools切换选项
 
-     
+
     证书：安装p12文件 和 证书mobileprovision文件
 
 
 	另外还需要ExportOptions.plist拷贝到制定的项目下，其作用是配置工程的证书设置
+	
+	![屏幕快照 2019-01-17 下午2.17.52](https://github.com//Note/images/屏幕快照 2019-01-17 下午2.17.52.png)
 
-	![屏幕快照 2019-01-17 下午2.17.52](/Users/intech/Note/images/屏幕快照 2019-01-17 下午2.17.52.png)
 
 
-
+​	
