--- a/content/mobile/打包工程.md
+++ b/content/mobile/打包工程.md
@@ -83,7 +83,7 @@
 
     如果command line tools找不到，则进入xcode->perferece->locations->command line tools切换选项
 
-    证书：安装p12文件 和 证书mobileprovision文件
+    证书：[安装p12文件 和 证书mobileprovision文件](https://blog.csdn.net/xxw888/article/details/73640139)
 
     
 
