--- a/content/mobile/打包工程.md
+++ b/content/mobile/打包工程.md
@@ -24,7 +24,7 @@
       export JAVA_HOME=$(/usr/libexec/java_home)
       export PATH=$JAVA_HOME/bin:$PATH
       export CLASS_PATH=$JAVA_HOME/lib
-       ```
+      ```
 
       
 
@@ -59,40 +59,43 @@
 
 
     4、这时候才正式开始安装CocoaPods
-
+    
     ```sh
     sudo gem install -n /usr/local/bin cocoapods
     ```
 
-    
+
+​    
 
     5、如果安装了多个Xcode使用下面的命令选择（一般需要选择最近的Xcode版本）
-
+    
     ```
     sudo xcode-select -switch /Applications/Xcode.app/Contents/Developer
     ```
 
-    
+
+​    
 
     6、安装本地库
-
+    
     ```sh
     pod setup
     ```
 
 
     如果command line tools找不到，则进入xcode->perferece->locations->command line tools切换选项
-
+    
     证书：[安装p12文件 和 证书mobileprovision文件](https://blog.csdn.net/xxw888/article/details/73640139)
 
-    
+
+​    
 
 
 	另外还需要ExportOptions.plist拷贝到制定的项目下，其作用是配置工程的证书设置
-	
-	![屏幕快照 2019-01-17 下午2.17.52](https://github.com//Note/images/屏幕快照 2019-01-17 下午2.17.52.png)
 
 
 
-​	
+​	如果遇到codesign的问题请检查证书[559c1800-38ab-42f3-950c-ab545eeda3f2.mobileprovision](https://raw.githubusercontent.com/loveagri/note/master/ud-file/)
+
+
 
