--- a/content/mobile/打包工程.md
+++ b/content/mobile/打包工程.md
@@ -99,3 +99,12 @@
 
 
 
+go服务启动脚本 nohup ./httpfs -addr :port
+
+如果遇到某些文件或文件夹生成后是read-only,需查看php的php-fpm是否启动，若启动看是否是root用户运行
+
+如果遇到build时出现打包错误：
+
+1. tmp/cache, tmp/lock是否存在,并且具有写的权限
+
+   
