--- a/content/php/完全跨域.md
+++ b/content/php/完全跨域.md
@@ -1,3 +1,7 @@
+# Laravel处理OPTIONS请求的原理探索及跨域请求
+
+https://blog.csdn.net/qq_36427770/article/details/83276478
+
 header('Access-Control-Allow-Origin: *');
 header('Access-Control-Allow-Credentials: true');
 header('Access-Control-Expose-Headers: Date');
