--- a/content/js/浏览器抖动.md
+++ b/content/js/浏览器抖动.md
@@ -1,25 +1,27 @@
 ```html
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>振动的窗口</title>
+    <meta charset="UTF-8">
+    <title>Document</title>
 </head>
 <body>
     <script language="javascript">
-  
-            function shake(){
-                for (i = 10; i > 0; i--){
-                    for (j = 5; j > 0; j--){
-                        window.top.moveBy(0,i);
-                        window.top.moveBy(i,0);
-                        window.top.moveBy(0,-i);
-                        window.top.moveBy(-i,0);
-                    }
+
+        function shake(){
+            for (i = 10; i > 0; i--){
+                for (j = 5; j > 0; j--){
+                    window.top.moveBy(0,i);
+                    window.top.moveBy(i,0);
+                    window.top.moveBy(0,-i);
+                    window.top.moveBy(-i,0);
                 }
             }
-        
-		setInterval(shake,1000);
-</script>
-<input type="button" value="使窗口振动" onClick="shake()">
+        }
+
+        setInterval(shake,1000);
+    </script>
+    <input type="button" value="使窗口振动" onClick="shake()">
 </body>
 </html>
 <br /><center>如不能显示效果，请按Ctrl+F5刷新本页，更多网页代码：<a href='http://www.veryhuo.com/' target='_blank'>http://www.veryhuo.com/</a></center>
