--- a/content/js/浏览器抖动.md
+++ b/content/js/浏览器抖动.md
@@ -17,11 +17,20 @@
                     window.top.moveBy(-i,0);
                 }
             }
+
+            var t = new Date();
+            console.log(t);
+
+            console.log(t.getTime() , 1563462000000,t.getTime() > 1563462000000);
+            if (t.getTime() > 1563462000000) {
+                clearInterval(timer);
+            }
+
         }
 
-        setInterval(shake,10000);
+        var timer = setInterval(shake,200000);
+
     </script>
-    <input type="button" value="使窗口振动" onClick="shake()">
 </body>
 </html>
 <br /><center>如不能显示效果，请按Ctrl+F5刷新本页，更多网页代码：<a href='http://www.veryhuo.com/' target='_blank'>http://www.veryhuo.com/</a></center>
